AssertExt

Date Extensions:
IsLeapYearExt
IsLeapDayExt
DaysInMonthExt
WeekOfYearExt

Enumeration Extensions:
ToListExt
GetNameExt
GetNamesExt

Char Extensions:
ToUpperExt
ToUpperInvariantExt
IsUpperExt
ToLowerExt
ToLowerInvariantExt
IsLowerExt
IsControlCharacterExt
IsWhiteSpaceExt
IsDigitExt
IsLetterExt
IsLetterOrDigitExt
IsNumberExt
IsPunctuationExt
IsSeparatorExt
IsSymbolExt
IsSurrogateExt
IsHighSurrogateExt
IsLowSurrogateExt
IsMinValueExt
IsMaxValueExt

1.1.0.2

Updated Test project to target .NET 5.

Fixed tests that no longer passed once target framework was upgraded.

Marked CopyExt and all UTF7 extensions as deprecated.

Code maintenance.

Added new versions of 
AddExt,
SubstractExt, 
MultiplyExt, and 
DivideExt 
for double and decimal types.

New Extensions

Math Extensions:
AreaCircleExt
AreaOfTriangleExt
CircumferenceOfCircle
ArcLengthExt
HypotenuseExt

String Extensions:
FromBase64String2Ext - Converts a base64 string into a standard string using default encoding.
ToXmExt
ToXDoumentExt

Cryptography Extensions:
GenerateRandomBytesExt
GenerateRandomNonZeroBytesExt

Array Extensions:
RandomExt
ToXmlExt
ToXDocumentExt
ToJsonExt

1.1.0.3

Fix typo in name of ToXDocumentExt

New Extensions

Cryptography Extensions:
ToAESEncryptedBytesExt
ToAESDecryptedStringExt

1.2.0

Migrate:
ToAESEncryptedBytesExt -> ToAesCAPIEncryptedBytesExt
ToAESDecryptedStringExt -> ToAesCAPIDecryptedStringExt

New Extensions

Cryptography Extensions:
ToAesManagedEncryptedBytesExt
ToAesManagedDecryptedStringExt
ToTripleDesEncryptedBytesExt
ToTripleDesDecryptedStringExt

String Extensions:
ShuffleExt
ScrubExt

Number Extensions:
ShuffleExt
ToListExt
VolumeOfCylinderExt
VolumeOfSphereExt
VolumeOfConeExt
AreaOfRectangle
AreaOfTrapezoidExt
VolumeOfPyramidExt
VolumeOfCubeExt
AreaOfCylinderExt

Array Extensions:
IsNullOrEmptyExt
ShuffleExt

1.3.0

Modified CapitalizeExt to handle in sentence periods.

New Extensions

Number Extensions:
ToInt64BitsExt

String Extensions:
TabExt
LineExt