@@ -3,6 +3,7 @@
 
 using System;
 using System.Text;
+using System.Web;
 
 namespace Extensions.net
 {
@@ -134,28 +135,28 @@ namespace Extensions.net
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static byte[] UrlDecodeToBytesExt(this byte[] bytes) => System.Web.HttpUtility.UrlDecodeToBytes(bytes);
+        public static byte[] UrlDecodeToBytesExt(this byte[] bytes) => HttpUtility.UrlDecodeToBytes(bytes);
 
         /// <summary>
         /// Maps to System.Web.HttpUtility.UrlEncodeToBytes
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static byte[] UrlEncodeToBytesExt(this byte[] bytes) => System.Web.HttpUtility.UrlEncodeToBytes(bytes);
+        public static byte[] UrlEncodeToBytesExt(this byte[] bytes) => HttpUtility.UrlEncodeToBytes(bytes);
 
         /// <summary>
         /// Maps to System.Text.Encoding.Default.GetString
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringExt(this byte[] bytes) => System.Text.Encoding.Default.GetString(bytes);
+        public static string GetStringExt(this byte[] bytes) => Encoding.Default.GetString(bytes);
 
         /// <summary>
         /// Maps to System.Text.Encoding.ASCII.GetString
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringASCIIExt(this byte[] bytes) => System.Text.Encoding.ASCII.GetString(bytes);
+        public static string GetStringASCIIExt(this byte[] bytes) => Encoding.ASCII.GetString(bytes);
 
         /// <summary>
         /// [deprecated] This method is now deprecated and may be removed in future versions. Use GetStringUTF8Ext instead.
@@ -163,34 +164,34 @@ namespace Extensions.net
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringUTF7Ext(this byte[] bytes) => System.Text.Encoding.UTF7.GetString(bytes);
+        public static string GetStringUTF7Ext(this byte[] bytes) => Encoding.UTF7.GetString(bytes);
 
         /// <summary>
         /// Maps to System.Text.Encoding.UTF8.GetString
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringUTF8Ext(this byte[] bytes) => System.Text.Encoding.UTF8.GetString(bytes);
+        public static string GetStringUTF8Ext(this byte[] bytes) => Encoding.UTF8.GetString(bytes);
 
         /// <summary>
         /// Maps to System.Text.Encoding.UTF32.GetString
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringUTF32Ext(this byte[] bytes) => System.Text.Encoding.UTF32.GetString(bytes);
+        public static string GetStringUTF32Ext(this byte[] bytes) => Encoding.UTF32.GetString(bytes);
 
         /// <summary>
         /// Maps to System.Text.Encoding.Unicode.GetString
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringUnicodeExt(this byte[] bytes) => System.Text.Encoding.Unicode.GetString(bytes);
+        public static string GetStringUnicodeExt(this byte[] bytes) => Encoding.Unicode.GetString(bytes);
 
         /// <summary>
         /// Maps to System.Text.Encoding.BigEndianUnicode.GetString
         /// </summary>
         /// <param name="bytes"></param>
         /// <returns></returns>
-        public static string GetStringBigEndianUnicodeExt(this byte[] bytes) => System.Text.Encoding.BigEndianUnicode.GetString(bytes);
+        public static string GetStringBigEndianUnicodeExt(this byte[] bytes) => Encoding.BigEndianUnicode.GetString(bytes);
     }
 }
