@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>1.3.0-alpha</Version>
+    <Version>1.3.0</Version>
     <Authors>adyle5</Authors>
     <Copyright>Adrian Gabor</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -19,6 +19,17 @@ Visit our wiki at https://github.com/adyle5/ExtensionsDotNet/wiki for a list of 
 To send feedback, suggestions, or report an issue, please visit https://www.nuget.org/packages/ExtensionsDotNet/ and click on "Contact owner."</Description>
     <PackageReleaseNotes>
 		1.3.0
+
+		Modified CapitalizeExt to handle in sentence periods.
+
+		New Extensions
+
+		Number Extensions:
+		ToInt64BitsExt
+
+		String Extensions:
+		TabExt
+		LineBreakExt
 
 	</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/adyle5/ExtensionsDotNet</RepositoryUrl>
